<resources>
    <string name="app_name">Init Engineer</string>
    <string name="app_name_ch">純靠北工程師</string>
    <string name="rules">一、責任聲明：\n
本站使用者須對自己所張貼之每一篇文章負責，本站毋需對站內以及其他關聯之社群媒體的言論負擔起任何的責任，責任的歸屬權屬於各位發表人。\n
\n
二、發表文章時之注意事項：\n
1. 尊重他人意見，注意用字遣詞與口氣，避免引起爭吵。\n
2. 避免在公眾區域，討論私人事務。\n
3. 避免發表文章於非相關區域，文章標題及內容不符合討論區之討論主題。\n
4. 禁止重複刊登相同內容或相同意義之留言。\n
5. 適度引用文章，避免引用過長文章，造成閱讀困擾。\n
6. 不適當的廣告、宣傳活動或商業性留言。\n
7. 禁止發表謾罵、脅迫、挑釁、猥褻或不雅之文字。\n
8. 禁止發表個人測試用文章或散播不實消息之文章，張貼文章，應自負相關法律責任。\n
9. 若有未規定的部份，由版主依主觀認定，視情況處理。\n
\n
三、違規處理辦法：\n
違反上述規定之文章或作者，版主可刪除文章或行使禁貼之處份。\n
\n
四、附註及補充說明：\n
1. 本站歡迎網友互相討論發表己見，唯請務必遵守上述規定。\n
2. 是否違反上述規定，由版主主觀認定，請謹慎用詞。\n
3. 請學習包容各種意見，如遇惡意批評或攻擊之文章，切勿加入爭執，並且善用檢舉，版主會有適當之處理，否則雙方皆依上述規定處理。</string>

    <string name="title_activity_login">登入</string>
    <string name="title_activity_settings">設定</string>

    <string name="card1_see_more">詳細內容</string>
    <string name="backpress"><![CDATA[Back]]></string>
    <string name="loading_failed">讀取資料失敗，請稍後再試</string>

    <string name="menu_1A">首頁 Index</string>
    <string name="menu_2A">文章列表 ArticleList</string>
    <string name="menu_3A">群眾審核 Review</string>
    <string name="menu_4A">儀錶板 Dashboard</string>
    <string name="menu_5A">發表文章 PublishArticle</string>

    <string name="media_fb1">Facebook 主站</string>
    <string name="media_fb2">Facebook 次站</string>
    <string name="media_plurk">Plurk 主站</string>
    <string name="media_twitter">Twitter 主站</string>
    <string name="media_platform">Platform 主站</string>

    <string name="bottom_sheet_share">分享</string>
    <string name="bottom_sheet_font">選擇字體</string>
    <string name="bottom_sheet_theme">選擇主題</string>
    <string name="pref_title_opensource">Open Source License</string>

    <string name="pref_app_version">pref_app_version</string>
    <string name="pref_app_versionCode">pref_app_versionCode</string>

    <string name="pref_app_id_search">pref_app_id_search</string>

    <string name="pref_openSource_key" translatable="false">openSource_key</string>
    <string name="pref_project_on_github" translatable="false">project_on_github_key</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="title_activity_article_v2">ArticleActivityV2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
