<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreateArticleFragment">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/view_create_article"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll"
                    app:toolbarId="@+id/toolbar">

                    <LinearLayout
                        app:layout_collapseMode="parallax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="@drawable/custom_ripple"
                                android:id="@+id/tv_backpress"
                                android:padding="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/dos"
                                android:paddingTop="?attr/actionBarSize"
                                android:text="@string/backpress"
                                android:textColor="@color/FxWhite"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_marginLeft="10dp"
                                android:id="@+id/header_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/dos"
                                android:paddingTop="?attr/actionBarSize"
                                android:text="@string/menu_5A"
                                android:textColor="@color/FxWhite"
                                android:textSize="24sp" />

                        </LinearLayout>

                        <engineer.kaobei.view.KaobeiArticleViewer
                            android:id="@+id/viewer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="15dp" />

                    </LinearLayout>


                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_sheet"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".ScrollingActivity">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/line"
                        android:layout_width="40dp"
                        android:layout_height="7dp"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/bottomsheet_line" />

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/FxBlackT">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center">

                                    <TextView
                                        android:id="@+id/tv_edit_content"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:layout_margin="-10dp"
                                        android:fontFamily="@font/dos"
                                        android:gravity="center"
                                        android:textColor="@color/FxWhite"
                                        android:textSize="14sp" />

                                    <com.google.android.material.button.MaterialButton
                                        android:id="@+id/btn_edit_content"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"
                                        android:layout_marginRight="10dp"
                                        android:text="編輯文章" />

                                </RelativeLayout>

                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/cardview_select_theme"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="#212529">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center">

                                    <TextView
                                        android:id="@+id/tv_select_theme"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:layout_margin="20dp"
                                        android:fontFamily="@font/dos"
                                        android:gravity="center"
                                        android:text="黑底綠字"
                                        android:textColor="#28a745"
                                        android:textSize="24sp" />

                                    <com.google.android.material.button.MaterialButton
                                        android:id="@+id/btn_select_theme"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"
                                        android:layout_marginRight="10dp"
                                        android:text="選擇主題" />

                                </RelativeLayout>

                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/FxBlackT">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center">

                                    <TextView
                                        android:id="@+id/tv_select_font"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:layout_margin="20dp"
                                        android:fontFamily="@font/dos"
                                        android:gravity="center"
                                        android:text="AURAKA 點陣宋字型"
                                        android:textColor="@color/FxWhite"
                                        android:textSize="24sp" />

                                    <com.google.android.material.button.MaterialButton
                                        android:id="@+id/btn_select_font"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"
                                        android:layout_marginRight="10dp"
                                        android:text="選擇字體" />

                                </RelativeLayout>

                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/FxBlackT">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center">

                                    <ImageView
                                        android:id="@+id/img_ArticleImg"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:scaleType="centerCrop" />

                                    <com.google.android.material.button.MaterialButton
                                        android:id="@+id/btn_select_image"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"
                                        android:layout_marginRight="10dp"
                                        android:text="選擇圖片" />

                                </RelativeLayout>

                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/FxBlackT">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:layout_marginLeft="20dp"
                                        android:layout_marginTop="20dp"
                                        android:layout_marginRight="20dp"
                                        android:fontFamily="@font/dos"
                                        android:text="板規"
                                        android:textColor="@color/FxWhite"
                                        android:textSize="24sp" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="20dp"
                                        android:fontFamily="@font/dos"
                                        android:text="@string/rules"
                                        android:textColor="@color/FxWhite"
                                        android:textSize="14sp" />

                                </LinearLayout>

                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/cardview_submit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginBottom="80dp"
                                app:cardBackgroundColor="@color/FxBlackT">

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:layout_margin="20dp"
                                        android:fontFamily="@font/dos"
                                        android:gravity="center"
                                        android:text="發表文章"
                                        android:textColor="@color/FxWhite"
                                        android:textSize="18sp" />

                                </RelativeLayout>

                            </com.google.android.material.card.MaterialCardView>

                        </LinearLayout>

                    </androidx.core.widget.NestedScrollView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <include
            android:id="@+id/view_not_authorized"
            android:visibility="gone"
            layout="@layout/view_create_article_not_authorized"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>